# cw-nfts-simple

./: Cargo.toml  README.md
.cargo/: config
contracts/cw721-simple/: Cargo.toml  README.md
contracts/cw721-simple-base/: Cargo.toml
contracts/cw721-simple-base/examples/: schema.rs
contracts/cw721-simple-base/schema/: query_msg.json
contracts/cw721-simple-base/src/: contract.rs  execute.rs  lib.rs  state.rs
contracts/cw721-simple-metadata/: Cargo.toml  README.md
contracts/cw721-simple-metadata-without-custom-msg/: Cargo.toml  README.md
contracts/cw721-simple-metadata-without-custom-msg/src/: contract.rs  error.rs  execute.rs  msg.rs  query.rs
contracts/cw721-simple-metadata/src/: lib.rs
contracts/cw721-simple/src/: lib.rs
