[package]
name = "cw721-simple-base"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]


[dependencies]
cosmwasm-std = "1.0.0"
cw-utils = "0.14.0"
schemars = "0.8.10"
serde = { version = "1.0.140", default-features = false, features = ["derive"] }

[dev-dependencies]
cw-storage-plus = "0.14.0"
cosmwasm-schema = "1.0.0"
cw721 = "0.13.4"